added two danish samples

--- a/index.html
+++ b/index.html
@@ -112,6 +112,39 @@
         <!-- Add more rows as needed -->
       </tbody>
     </table>
+    <h2>Danish Samples</h2>
+    <table class="audio-table">
+      <thead>
+        <tr>
+          <th>Scenario / Sample</th>
+          <th>Prompt 1</th>
+          <th>Sample 1</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="row-label">Danish Generation (Sample 1) </td>
+          <td>Hej og velkommen til smørrebrødspodcasten, hvor vi i dag skal tale om dyrlægens natmad.</td>
+          <td>
+            <audio controls>
+              <source src="audio/dansk_smorrebrod.wav" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td class="row-label">Failed Danish Generation (Sample 2) </td>
+          <td>Det var i den Tid, jeg gik omkring og sulted i Kristiania, denne forunderlige By, som ingen forlader, før han har fået Mærker af den.</td>
+          <td>
+            <audio controls>
+              <source src="audio/dansk_musik.wav" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+          </td>
+        </tr>
+        <!-- Add more rows as needed -->
+      </tbody>
+    </table>
   </section>
 
   <section id="paper-link">
